Smartlock auto unlock [2/2]
Change-Id: I9ddd5e4cc95edd78a6e8ca74f99e4d859f902f49

--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -31,6 +31,13 @@
               android:summaryOn="@string/fprint_sucess_vib_summary_on"
               android:summaryOff="@string/fprint_sucess_vib_summary_off"
               android:defaultValue="true" />
+
+        <ru.baikalos.gear.preference.SecureSettingSwitchPreference
+            android:key="smartlock_auto_unlock"
+            android:title="@string/smartlock_auto_unlock_title"
+            android:summary="@string/smartlock_auto_unlock_summary"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
