Cleanup. Commented out unused sections till needed [1/2]
Change-Id: Ie2e8a19df8447f696172c599230dcae05984e389

--- a/res/xml/about.xml
+++ b/res/xml/about.xml
@@ -36,7 +36,7 @@
         android:summary="@string/stats_summary"
         android:fragment="ru.baikalos.extras.romstats.AnonymousStats" />
 
-    <PreferenceCategory
+    <!-- PreferenceCategory
         android:title="@string/weblinks_category">
 
         <Preference
@@ -65,7 +65,7 @@
                 android:data="@string/baikalos_gerrit_link" />
         </Preference>
 
-    </PreferenceCategory>
+    </PreferenceCategory -->
 
     <PreferenceCategory
         android:title="@string/info_category">
