--- a/res/xml/dashboard.xml
+++ b/res/xml/dashboard.xml
@@ -41,7 +41,7 @@
     </PreferenceCategory>
 
 
-    <PreferenceCategory
+    <!-- PreferenceCategory
         android:title="@string/navigation_category">
 
         <PreferenceScreen
@@ -56,7 +56,7 @@
             android:icon="@drawable/ic_settings_recents"
             android:fragment="ru.baikalos.extras.fragments.Recents" />
 
-    </PreferenceCategory>
+    </PreferenceCategory -->
 
     <PreferenceCategory
         android:title="@string/user_interface_category">
@@ -73,11 +73,11 @@
             android:icon="@drawable/ic_settings_notifications"
             android:fragment="ru.baikalos.extras.fragments.Notifications" />
 
-        <PreferenceScreen
+        <!-- PreferenceScreen
             android:title="@string/quick_settings_title"
             android:summary="@string/quick_settings_summary"
             android:icon="@drawable/ic_settings_quick_settings"
-            android:fragment="ru.baikalos.extras.fragments.QuickSettings" />
+            android:fragment="ru.baikalos.extras.fragments.QuickSettings" /-->
 
         <PreferenceScreen
             android:title="@string/lockscreen_title"
@@ -85,11 +85,11 @@
             android:icon="@drawable/ic_settings_lockscreen"
             android:fragment="ru.baikalos.extras.fragments.Lockscreen" />
 
-        <PreferenceScreen
+        <!-- PreferenceScreen
             android:title="@string/panel_porn_title"
             android:summary="@string/panel_porn_summary"
             android:icon="@drawable/ic_settings_panel_porn"
-            android:fragment="ru.baikalos.extras.fragments.PanelPorn" />
+            android:fragment="ru.baikalos.extras.fragments.PanelPorn" / -->
 
         <PreferenceScreen
             android:title="@string/theming_title"
@@ -97,11 +97,11 @@
             android:icon="@drawable/ic_settings_theming"
             android:fragment="ru.baikalos.extras.fragments.Theming" />
 
-        <PreferenceScreen
+        <!-- PreferenceScreen
             android:title="@string/other_ui_title"
             android:summary="@string/other_ui_summary"
             android:icon="@drawable/ic_settings_other_ui"
-            android:fragment="ru.baikalos.extras.fragments.OtherUi" />
+            android:fragment="ru.baikalos.extras.fragments.OtherUi" / -->
 
     </PreferenceCategory>
 
@@ -114,11 +114,11 @@
             android:icon="@drawable/ic_settings_system_animations"
             android:fragment="ru.baikalos.extras.fragments.SystemAnimations" />
 
-        <PreferenceScreen
+        <!--PreferenceScreen
             android:title="@string/system_behaviour_title"
             android:summary="@string/system_behaviour_summary"
             android:icon="@drawable/ic_settings_system_behaviour"
-            android:fragment="ru.baikalos.extras.fragments.SystemBehaviour" />
+            android:fragment="ru.baikalos.extras.fragments.SystemBehaviour" / -->
 
         <PreferenceScreen
             android:title="@string/system_extensions_title"
