--- a/res/xml/dashboard.xml
+++ b/res/xml/dashboard.xml
@@ -139,6 +139,12 @@
             android:icon="@drawable/ic_settings_system_powersave"
             android:fragment="ru.baikalos.extras.fragments.PowerSave" />
 
+
+        <PreferenceScreen
+            android:title="@string/torch_title"
+            android:summary="@string/torch_summary"
+            android:fragment="ru.baikalos.extras.fragments.Torch" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
