Get AppOps back
Change-Id: I9a5d33e563a27ee84a8e3cd9d0af9238776c0cba

--- a/res/xml/power_save.xml
+++ b/res/xml/power_save.xml
@@ -58,10 +58,15 @@
 	    <intent android:action="android.settings.IGNORE_BATTERY_OPTIMIZATION_SETTINGS"/>
     </Preference>
 
-    <!-- Preference android:title="@string/prefs_app_options_title" 
+    <!--Preference
+            android:title="@string/prefs_app_options_title"
+            android:summary="@string/prefs_app_options_summary"
+            android:fragment="com.android.settings.applications.appops.AppOpsSummary"/ -->
+
+    <Preference android:title="@string/prefs_app_options_title" 
 		    android:summary="@string/prefs_app_options_summary">
 	    <intent android:action="android.settings.APP_OPS_SETTINGS"/>
-    </Preference -->
+    </Preference>
 
 
 </PreferenceScreen>
