Incall vibration options [3/3] *allow setting vibration when call is connected *allow setting vibration when call is disconnected *allow setting vibration for call waiting *this works with google and aosp dialer :)
Change-Id: Ic32961100f14ee9dde5a7282382a35def0ef8561

--- a/res/xml/dashboard.xml
+++ b/res/xml/dashboard.xml
@@ -139,11 +139,15 @@
             android:icon="@drawable/ic_settings_system_powersave"
             android:fragment="ru.baikalos.extras.fragments.PowerSave" />
 
-
         <PreferenceScreen
             android:title="@string/torch_title"
             android:summary="@string/torch_summary"
             android:fragment="ru.baikalos.extras.fragments.Torch" />
+
+        <PreferenceScreen
+            android:title="@string/vibrator_title"
+            android:summary="@string/vibrator_summary"
+            android:fragment="ru.baikalos.extras.fragments.Vibrator" />
 
     </PreferenceCategory>
 
