--- a/res/xml/dashboard.xml
+++ b/res/xml/dashboard.xml
@@ -142,11 +142,13 @@
         <PreferenceScreen
             android:title="@string/torch_title"
             android:summary="@string/torch_summary"
+            android:icon="@drawable/ic_settings_torch"
             android:fragment="ru.baikalos.extras.fragments.Torch" />
 
         <PreferenceScreen
             android:title="@string/vibrator_title"
             android:summary="@string/vibrator_summary"
+            android:icon="@drawable/ic_settings_vibrator"
             android:fragment="ru.baikalos.extras.fragments.Vibrator" />
 
     </PreferenceCategory>
