--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -22,20 +22,26 @@
     android:title="@string/lockscreen_title">
 
     <PreferenceCategory
-          android:key="lockscreen_security_category"
-          android:title="@string/lockscreen_security_category">
+        android:key="lockscreen_security_category"
+        android:title="@string/lockscreen_security_category">
 
-          <ru.baikalos.gear.preference.SystemSettingSwitchPreference
-              android:key="fingerprint_success_vib"
-              android:title="@string/fprint_sucess_vib_title"
-              android:summaryOn="@string/fprint_sucess_vib_summary_on"
-              android:summaryOff="@string/fprint_sucess_vib_summary_off"
-              android:defaultValue="true" />
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="fingerprint_success_vib"
+            android:title="@string/fprint_sucess_vib_title"
+            android:summaryOn="@string/fprint_sucess_vib_summary_on"
+            android:summaryOff="@string/fprint_sucess_vib_summary_off"
+            android:defaultValue="true" />
 
         <ru.baikalos.gear.preference.SecureSettingSwitchPreference
             android:key="smartlock_auto_unlock"
             android:title="@string/smartlock_auto_unlock_title"
             android:summary="@string/smartlock_auto_unlock_summary"
+            android:defaultValue="false" />
+
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="fp_unlock_keystore"
+            android:title="@string/fp_unlock_keystore_title"
+            android:summary="@string/fp_unlock_keystore_summary"
             android:defaultValue="false" />
 
     </PreferenceCategory>
