--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -47,6 +47,12 @@
            android:defaultValue="1"
            android:dependency="network_traffic_state" />
 
+         <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+             android:key="show_fourg_icon"
+             android:title="@string/show_fourg_icon_title"
+             android:summary="@string/show_fourg_icon_summary"
+             android:defaultValue="false"/>
+
    </PreferenceCategory>
 
 </PreferenceScreen>
