--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -53,6 +53,12 @@
              android:summary="@string/show_fourg_icon_summary"
              android:defaultValue="false"/>
 
+         <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+             android:key="roaming_indicator_icon"
+             android:title="@string/roaming_indicator_icon_title"
+             android:summary="@string/roaming_indicator_icon_summary"
+             android:defaultValue="true"/>
+
    </PreferenceCategory>
 
 </PreferenceScreen>
