--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -59,6 +59,12 @@
              android:summary="@string/roaming_indicator_icon_summary"
              android:defaultValue="true"/>
 
+         <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+             android:key="volte_icon"
+             android:title="@string/volte_icon_title"
+             android:summary="@string/volte_icon_summary"
+             android:defaultValue="true"/>
+
    </PreferenceCategory>
 
 </PreferenceScreen>
