--- a/res/xml/recents.xml
+++ b/res/xml/recents.xml
@@ -21,15 +21,30 @@
     xmlns:baikalosextras="http://schemas.android.com/apk/res-auto"
     android:title="@string/recents_title">
 
+    <!--
     <PreferenceCategory
         android:key="stock_recents_category"
         android:title="@string/stock_recents_category">
 
     </PreferenceCategory>
+    -->
 
     <PreferenceCategory
         android:key="alternative_recents_category"
         android:title="@string/alternative_recents_category">
+
+        <Preference
+            android:key="swipe_up_enabled_warning"
+            android:selectable="false"
+            android:summary="@string/alternative_recents_swipe_up_enabled_warning_summary" />
+
+    <ru.baikalos.extras.preference.SystemSettingMasterSwitchPreference
+            android:key="use_slim_recents"
+            android:title="@string/slim_recents_title"
+            baikalosextras:thereCanBeOnlyOneGroupId="1"
+            android:defaultValue="false"
+            android:fragment="ru.baikalos.extras.fragments.SlimRecents" />
+
 
     </PreferenceCategory>
 
