Introduce "suspend while play in offload mode" [2/2]
Change-Id: I8ef4a12b95b6505b7d50619fd366ae293e1d6b4e

--- a/res/values-ru/audio_tweaks_strings.xml
+++ b/res/values-ru/audio_tweaks_strings.xml
@@ -16,4 +16,7 @@
     <string name="audio_tweaks_hp_detect_title">Отключить наушники</string>
     <string name="audio_tweaks_hp_detect_summary">Отключить определение проводных наушников или гарнитуры. Для аппаратов с поврежденным портом USB.</string>
 
+    <string name="audio_tweaks_suspend_play_title">Усыплять при проигрывании</string>
+    <string name="audio_tweaks_suspend_play_summary">Разрешить сон системы при проигрывании музыки. Совместимо не со всеми проигрывателями.</string>
+
 </resources>
