--- a/res/values-ru/audio_tweaks_strings.xml
+++ b/res/values-ru/audio_tweaks_strings.xml
@@ -19,4 +19,11 @@
     <string name="audio_tweaks_suspend_play_title">Усыплять при проигрывании</string>
     <string name="audio_tweaks_suspend_play_summary">Разрешить сон системы при проигрывании музыки. Совместимо не со всеми проигрывателями.</string>
 
+    <string name="audio_tweaks_a2dp_sbc_hd_title">Высокий битрейт SBC</string>
+    <string name="audio_tweaks_a2dp_sbc_hd_summary">Использовать высокий SBC битрейт для A2DP профиля Bluetooth</string>
+
+    <string name="audio_tweaks_a2dp_sbc_hdx_title">Высочайший битрейт SBC</string>
+    <string name="audio_tweaks_a2dp_sbc_hdx_summary">Использовать высочайший SBC битрейт для A2DP профиля Bluetooth</string>
+
+
 </resources>
