--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -19,4 +19,13 @@
     <string name="audio_tweaks_suspend_play_title">Suspend while play</string>
     <string name="audio_tweaks_suspend_play_summary">Allow system suspend while player active. Not all media players compatible.</string>
 
+    <string name="audio_tweaks_a2dp_sbc_hd_title">High SBC bitrate</string>
+    <string name="audio_tweaks_a2dp_sbc_hd_summary">Use High SBC bitrate for A2DP Bluetooth Profile</string>
+
+    <string name="audio_tweaks_a2dp_sbc_hdx_title">Highest SBC bitrate</string>
+    <string name="audio_tweaks_a2dp_sbc_hdx_summary">Use Highest SBC bitrate for A2DP Bluetooth Profile</string>
+
+    <string name="audio_tweaks_a2dp_sbc_prefer_title">Prefer SBC</string>
+    <string name="audio_tweaks_a2dp_sbc_prefer_summary">Prefer SBC over AAC or AptX</string>
+
 </resources>
