--- a/res/xml/audio_tweaks.xml
+++ b/res/xml/audio_tweaks.xml
@@ -33,6 +33,24 @@
         android:defaultValue="false" />
 
     <SwitchPreference
+        android:key="audio_tweaks_a2dp_sbc_hd"
+        android:title="@string/audio_tweaks_a2dp_sbc_hd_title"
+        android:summary="@string/audio_tweaks_a2dp_sbc_hd_summary"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="audio_tweaks_a2dp_sbc_hdx"
+        android:title="@string/audio_tweaks_a2dp_sbc_hdx_title"
+        android:summary="@string/audio_tweaks_a2dp_sbc_hdx_summary"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="audio_tweaks_a2dp_sbc_prefer"
+        android:title="@string/audio_tweaks_a2dp_sbc_prefer_title"
+        android:summary="@string/audio_tweaks_a2dp_sbc_prefer_summary"
+        android:defaultValue="false" />
+
+    <SwitchPreference
         android:key="audio_tweaks_suspend_play"
         android:title="@string/audio_tweaks_suspend_play_title"
         android:summary="@string/audio_tweaks_suspend_play_summary"
