Move buttons customisation from Settings to BaikalOS Extras [1/2]
Change-Id: Id5c0f1a4a3f78f232cf5889ff98758559fda4e2c

--- a/res/xml/dashboard.xml
+++ b/res/xml/dashboard.xml
@@ -40,6 +40,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/navigation_category">
+         <PreferenceScreen
+            android:title="@string/button_settings_title"
+            android:summary="@string/button_settings_title_summary"
+            android:icon="@drawable/ic_settings_buttons"
+            android:fragment="ru.baikalos.extras.fragments.ButtonsSettings" />
+     </PreferenceCategory>
 
     <!-- PreferenceCategory
         android:title="@string/navigation_category">
