Customize button backlight timeout [2/2]
Change-Id: I559561dd2e0ac3e5546de22461c534d6ec22b8a1

--- a/res/values/buttons.xml
+++ b/res/values/buttons.xml
@@ -11,6 +11,17 @@
     <!-- Button brightness -->
     <string name="hardware_brightness_keys_title">Backlight</string>
     <string name="hardware_brightness_keys_title_summary">Enable navigation keys backlight</string>
+    <string name="hardware_button_backlight_timeout">Navigation keys backlight timeout</string>
+    <string name="hardware_button_backlight_timeout_summary">Navigation keys backlight timeout (disable if 0)</string>
+    <!-- Buttons backlight timeout -->
+    <string name="backlight_timeout_title">Buttons backlight timeout</string>
+    <string name="backlight_timeout_on">Enabled always</string>
+    <string name="backlight_timeout_3s">3 sec</string>
+    <string name="backlight_timeout_default">5 sec (default)</string>
+    <string name="backlight_timeout_10s">10 sec</string>
+    <string name="backlight_timeout_15s">15 sec</string>
+    <string name="backlight_timeout_20s">20 sec</string>
+    <string name="backlight_timeout_30s">30 sec</string>
     <!-- Buttons: Categories -->
     <string name="home_key_title">Home button</string>
     <string name="back_key_title">Back button</string>
