Add button backlight brightness slider android:key="button_brightness" values: 1-255, default=100
Change-Id: I532bf677f32c484b2886712363cf258c1b76c6da

--- a/res/values/buttons.xml
+++ b/res/values/buttons.xml
@@ -11,6 +11,7 @@
     <!-- Button brightness -->
     <string name="hardware_brightness_keys_title">Backlight</string>
     <string name="hardware_brightness_keys_title_summary">Enable navigation keys backlight</string>
+    <string name="button_brightness_title">Backlight brightness</string>
     <string name="hardware_button_backlight_timeout">Navigation keys backlight timeout</string>
     <string name="hardware_button_backlight_timeout_summary">Navigation keys backlight timeout (disable if 0)</string>
     <!-- Buttons backlight timeout -->
