--- a/res/values/buttons.xml
+++ b/res/values/buttons.xml
@@ -14,6 +14,8 @@
     <string name="button_brightness_title">Backlight brightness</string>
     <string name="hardware_button_backlight_timeout">Navigation keys backlight timeout</string>
     <string name="hardware_button_backlight_timeout_summary">Navigation keys backlight timeout (disable if 0)</string>
+    <string name="button_backlight_on_touch_only_title">Button touch</string>
+    <string name="button_backlight_on_touch_only_summary">Enable backlight with timeout only on button touch</string>
     <!-- Buttons backlight timeout -->
     <string name="backlight_timeout_title">Buttons backlight timeout</string>
     <string name="backlight_timeout_on">Enabled always</string>
