--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -48,6 +48,11 @@
         android:summary="@string/button_backlight_on_touch_only_summary"
         android:defaultValue="0"
         android:dependency="button_brightness_enabled" />
+     <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+        android:key="anbi_enabled_option"
+        android:title="@string/anbi_title"
+        android:summary="@string/anbi_summary"
+        android:defaultValue="false" />
      <PreferenceCategory
         android:key="home_key"
         android:title="@string/home_key_title">
