--- a/res/xml/navigation.xml
+++ b/res/xml/navigation.xml
@@ -17,6 +17,13 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:baikalosextras="http://schemas.android.com/apk/res-auto"
+    android:key="navigation_key"
     android:title="@string/navigation_title">
+
+     <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+        android:key="navigation_bar_enabled"
+        android:title="@string/navigation_bar_title"
+        android:summary="@string/navigation_bar_title_summary"
+        android:defaultValue="0" />
 
 </PreferenceScreen>
