--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -15,39 +15,46 @@
     xmlns:baikalosextras="http://schemas.android.com/apk/res-auto"
     android:key="button_settings"
     android:title="@string/button_settings_title">
-     <ru.baikalos.gear.preference.SystemSettingSwitchPreference
-        android:key="button_brightness_enabled"
-        android:title="@string/hardware_brightness_keys_title"
-        android:summary="@string/hardware_brightness_keys_title_summary"
-        android:defaultValue="0" />
-     <ru.baikalos.gear.preference.SystemSettingSeekBarPreference
-        android:key="button_brightness"
-        android:title="@string/button_brightness_title"
-        android:max="255"
-        android:min="1"
-        baikalosextras:unitsLeft=""
-        baikalosextras:unitsRight=""
-        android:defaultValue="100"
-        android:dependency="button_brightness_enabled" />
-     <ru.baikalos.gear.preference.SystemSettingIntListPreference
-        android:key="button_timeout"
-        android:title="@string/hardware_button_backlight_timeout"
-        android:summary="@string/hardware_button_backlight_timeout_summary"
-        android:entries="@array/backlight_timeout_entries"
-        android:entryValues="@array/backlight_timeout_values"
-        android:dependency="button_brightness_enabled"
-        android:defaultValue="5000" />
-     <ru.baikalos.gear.preference.SystemSettingSwitchPreference
-        android:key="button_backlight_on_touch_only"
-        android:title="@string/button_backlight_on_touch_only_title"
-        android:summary="@string/button_backlight_on_touch_only_summary"
-        android:defaultValue="0"
-        android:dependency="button_brightness_enabled" />
-     <ru.baikalos.gear.preference.SystemSettingSwitchPreference
-        android:key="anbi_enabled_option"
-        android:title="@string/anbi_title"
-        android:summary="@string/anbi_summary"
-        android:defaultValue="false" />
+     <PreferenceCategory
+        android:key="button_backlight_key"
+        android:title="@string/button_backlight_title">
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="button_brightness_enabled"
+            android:title="@string/hardware_brightness_keys_title"
+            android:summary="@string/hardware_brightness_keys_title_summary"
+            android:defaultValue="0" />
+        <ru.baikalos.gear.preference.SystemSettingSeekBarPreference
+            android:key="button_brightness"
+            android:title="@string/button_brightness_title"
+            android:max="255"
+            android:min="1"
+            baikalosextras:unitsLeft=""
+            baikalosextras:unitsRight=""
+            android:defaultValue="100"
+            android:dependency="button_brightness_enabled" />
+        <ru.baikalos.gear.preference.SystemSettingIntListPreference
+            android:key="button_timeout"
+            android:title="@string/hardware_button_backlight_timeout"
+            android:summary="@string/hardware_button_backlight_timeout_summary"
+            android:entries="@array/backlight_timeout_entries"
+            android:entryValues="@array/backlight_timeout_values"
+            android:dependency="button_brightness_enabled"
+            android:defaultValue="5000" />
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="button_backlight_on_touch_only"
+            android:title="@string/button_backlight_on_touch_only_title"
+            android:summary="@string/button_backlight_on_touch_only_summary"
+            android:defaultValue="0"
+            android:dependency="button_brightness_enabled" />
+     </PreferenceCategory>
+     <PreferenceCategory
+        android:title="@string/anbi_title">
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="anbi_enabled_option"
+            android:title="@string/anbi_title"
+            android:summary="@string/anbi_summary"
+            android:defaultValue="false" />
+     </PreferenceCategory>
      <PreferenceCategory
         android:key="home_key"
         android:title="@string/home_key_title">
