Audio tweaks: Add Extreme SBC Bitrate
Change-Id: I6faf69263cac13df42ef5eccf0fbc16dba995ee9

--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -25,6 +25,9 @@
     <string name="audio_tweaks_a2dp_sbc_hdx_title">Highest SBC bitrate</string>
     <string name="audio_tweaks_a2dp_sbc_hdx_summary">Use Highest SBC bitrate for A2DP Bluetooth Profile</string>
 
+    <string name="audio_tweaks_a2dp_sbc_hde_title">Extreme SBC bitrate</string>
+    <string name="audio_tweaks_a2dp_sbc_hde_summary">Use Extreme SBC bitrate for A2DP Bluetooth Profile</string>
+
     <string name="audio_tweaks_a2dp_sbc_prefer_title">Prefer SBC</string>
     <string name="audio_tweaks_a2dp_sbc_prefer_summary">Prefer SBC over AAC or AptX</string>
 
