--- a/res/values-ru/audio_tweaks_strings.xml
+++ b/res/values-ru/audio_tweaks_strings.xml
@@ -25,5 +25,8 @@
     <string name="audio_tweaks_a2dp_sbc_hdx_title">Высочайший битрейт SBC</string>
     <string name="audio_tweaks_a2dp_sbc_hdx_summary">Использовать высочайший SBC битрейт для A2DP профиля Bluetooth</string>
 
+    <string name="audio_tweaks_a2dp_sbc_hde_title">Экстремальный битрейт SBC</string>
+    <string name="audio_tweaks_a2dp_sbc_hde_summary">Использовать экстремальный SBC битрейт для A2DP профиля Bluetooth</string>
+
 
 </resources>
