--- a/res/values/power_save_strings.xml
+++ b/res/values/power_save_strings.xml
@@ -9,6 +9,8 @@
     <string name="powersave_wl_block_summary">Block wakelocks from all regular apps except system and whitelist.</string>
     <string name="powersave_throttle_alarms_title">Throttle Alarms</string>
     <string name="powersave_throttle_alarms_summary">Throttle wakeup alarms for regular apps except system and whitelist.</string>
+    <string name="powersave_restrict_screen_on_enabled_title">Restrict Screen On</string>
+    <string name="powersave_restrict_screen_on_enabled_summary">Apply app restrictions while Screen is On</string>
 
     <!-- Batery whitelist -->
     <string name="prefs_battery_saver_title">Whitelist</string>
