--- a/res/xml/system_extensions.xml
+++ b/res/xml/system_extensions.xml
@@ -49,6 +49,20 @@
         android:defaultValue="false"
         android:disableDependentsState="true" />
 
+    <ru.baikalos.gear.preference.GlobalSettingSwitchPreference
+        android:key="baikal_lid_sensor_enabled"
+        android:title="@string/baikal_lid_sensor_enabled_title"
+        android:summary="@string/baikal_lid_sensor_enabled_summary"
+        android:defaultValue="false"
+        android:disableDependentsState="true" />
+
+    <ru.baikalos.gear.preference.GlobalSettingSwitchPreference
+        android:key="baikal_lid_sensor_reverse"
+        android:title="@string/baikal_lid_sensor_reverse_title"
+        android:summary="@string/baikal_lid_sensor_reverse_summary"
+        android:defaultValue="false"
+        android:disableDependentsState="true" />
+
     <Preference
         android:key="system_app_remover"
         android:title="@string/system_app_remover_title"
