--- a/res/xml/buttons_settings.xml
+++ b/res/xml/buttons_settings.xml
@@ -151,4 +151,29 @@
             android:entryValues="@array/action_values" 
             android:defaultValue="0" />
      </PreferenceCategory>
+     <PreferenceCategory
+        android:key="volume_key"
+        android:title="@string/volume_key_title">
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="volume_answer_call"
+            android:title="@string/volume_answer_call_title"
+            android:summary="@string/volume_answer_call_summary"
+            android:defaultValue="0" />
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="volume_reject_call"
+            android:title="@string/volume_reject_call_title"
+            android:summary="@string/volume_reject_call_summary"
+            android:defaultValue="0" />
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="volume_end_call"
+            android:title="@string/volume_end_call_title"
+            android:summary="@string/volume_end_call_summary"
+            android:defaultValue="0" />
+        <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+            android:key="volume_button_music_control"
+            android:title="@string/volume_button_music_control_title"
+            android:summary="@string/volume_button_music_control_summary"
+            android:defaultValue="0" />
+     </PreferenceCategory>
+
  </PreferenceScreen>
