Refactor! Add Russian translations.
Change-Id: Id106f07315938ddd1b0354b4a88469022c93b675

--- a/res/values/navigation.xml
+++ b/res/values/navigation.xml
@@ -5,4 +5,10 @@
     <string name="navigation_bar_title">Navigation bar</string>
     <string name="navigation_bar_title_summary">Enable on-screen navigation keys</string>
 
+    <!-- OP like Navigation Gestures -->
+    <string name="gesture_settings_title">Navigation Gestures</string>
+    <string name="gesture_settings_info">Navigation bar must be disabled!\n\nAvailable gestures:\n\nBack\n- Swipe up on left or right side\n\nHome\n- Swipe up center\n\nRecent apps\n- Swipe up center and hold\n\nLong press home\n- Short swipe up and hold in the center</string>
+    <string name="use_bottom_gesture_title">Navigation gestures</string>
+    <string name="use_bottom_gesture_summary">Use bottom swipe up gestures for navigation</string>
+
 </resources>
