strings fix BAIKALOS -> BaikalOS
Change-Id: I23105c31f56ef37c13b8bebef9bf4636b15f99e3

--- a/res/xml/about.xml
+++ b/res/xml/about.xml
@@ -20,7 +20,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/about_title">
 
-    <!-- BAIKALOS logo -->
+    <!-- BaikalOS logo -->
     <Preference
         android:key="baikalos_logo"
         android:layout="@layout/about_logo" />
