--- a/res/values-cs/stats_strings.xml
+++ b/res/values-cs/stats_strings.xml
@@ -17,9 +17,9 @@
  */
 --><resources>
   <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
-  <string name="anonymous_statistics_title">Statistiky BAIKALOS</string>
+  <string name="anonymous_statistics_title">Statistiky BaikalOS</string>
   <string name="anonymous_statistics_warning_title">Informace</string>
-  <string name="anonymous_statistics_warning">Přihlášení k účasti na BAIKALOS statistikách umožní odesílat ne-soukromá data vývojářům Emotion, pro sledování instalací na různých zařízeních. Odeslané informace obsahují unikátní identifikátor, který nijak neohrožuje soukromá data. Data jsou odesílána jednou týdně a během startování.\n\nNáhled odesílaných informací lze zobrazit pomocí tlačítka Náhled dat.</string>
+  <string name="anonymous_statistics_warning">Přihlášení k účasti na BaikalOS statistikách umožní odesílat ne-soukromá data vývojářům Emotion, pro sledování instalací na různých zařízeních. Odeslané informace obsahují unikátní identifikátor, který nijak neohrožuje soukromá data. Data jsou odesílána jednou týdně a během startování.\n\nNáhled odesílaných informací lze zobrazit pomocí tlačítka Náhled dat.</string>
   <string name="enable_reporting_title">Povolit hlášení</string>
   <string name="disable_reporting_persistent">Trvalé odmítnutí</string>
   <string name="preview_data_title">Náhled dat</string>
@@ -41,6 +41,6 @@
   <string name="preview_country_title">Země</string>
   <string name="preview_carrier_title">Operátor</string>
   <string name="preview_romname_title">Název ROM</string>
-  <string name="preview_romversion_title">Verze BAIKALOS</string>
-  <string name="preview_buildtype_title">Typ sestavení BAIKALOS</string>
+  <string name="preview_romversion_title">Verze BaikalOS</string>
+  <string name="preview_buildtype_title">Typ sestavení BaikalOS</string>
 </resources>
