--- a/res/values-pl/stats_strings.xml
+++ b/res/values-pl/stats_strings.xml
@@ -36,6 +36,6 @@
   <string name="preview_country_title">Kraj</string>
   <string name="preview_carrier_title">Operator GSM</string>
   <string name="preview_romname_title">Nazwa ROMu</string>
-  <string name="preview_romversion_title">Wersja BAIKALOS</string>
+  <string name="preview_romversion_title">Wersja BaikalOS</string>
   <string name="preview_buildtype_title">Rodzaj kompilacji</string>
 </resources>
