--- a/res/values-pt-rPT/stats_strings.xml
+++ b/res/values-pt-rPT/stats_strings.xml
@@ -17,9 +17,9 @@
  */
 --><resources>
   <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
-  <string name="anonymous_statistics_title">BAIKALOS Stats</string>
+  <string name="anonymous_statistics_title">BaikalOS Stats</string>
   <string name="anonymous_statistics_warning_title">Acerca</string>
-  <string name="anonymous_statistics_warning">Optando por ter Stats BAIKALOS permitirá que dados não-pessoais ser enviada aos nossos servidores. As informações apresentadas incluem um identificador exclusivo, que não compromete a sua privacidade e dados pessoais.
+  <string name="anonymous_statistics_warning">Optando por ter Stats BaikalOS permitirá que dados não-pessoais ser enviada aos nossos servidores. As informações apresentadas incluem um identificador exclusivo, que não compromete a sua privacidade e dados pessoais.
 Os dados são enviados todos os 7 days.\n\nFor um exemplo dos dados que são enviados, torneira na visualização de dados.</string>
   <string name="enable_reporting_title">Activar relatório</string>
   <string name="disable_reporting_persistent">Recusa permanente de participação</string>
@@ -36,6 +36,6 @@ Os dados são enviados todos os 7 days.\n\nFor um exemplo dos dados que são env
   <string name="preview_country_title">País</string>
   <string name="preview_carrier_title">Operadora</string>
   <string name="preview_romname_title">Nome da ROM</string>
-  <string name="preview_romversion_title">Versão BAIKALOS</string>
-  <string name="preview_buildtype_title">Tipo de compilação BAIKALOS</string>
+  <string name="preview_romversion_title">Versão BaikalOS</string>
+  <string name="preview_buildtype_title">Tipo de compilação BaikalOS</string>
 </resources>
