Google Sans support [2/2]
Change-Id: I9a828a741c2a0f19ce09f97751f2ec162248f75d

--- a/res/values/system_extensions.xml
+++ b/res/values/system_extensions.xml
@@ -42,4 +42,7 @@
     <string name="baikal_lid_sensor_reverse_title">Reverse Smart Cover</string>
     <string name="baikal_lid_sensor_reverse_summary">Reverse Smart Cover Action</string>
 
+    <string name="use_google_sans_title">Google Sans default</string>
+    <string name="use_google_sans_summary">Use Google Sans as the default system font. Reboot required!</string>
+
 </resources>
