crowdin: import translation
Change-Id: I4bff6bf705a9f50240c619a7e00f8d273152699a

--- a/res/values-cs/master_switch_preference_strings.xml
+++ b/res/values-cs/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">Varování</string>
+    <string name="switch_disable_warning_message">Zakázání tohoto nastavení bez povolení alternativy může způsobit, že vaše zařízení bude nepoužitelné. Pokračovat?</string>
+</resources>
