--- a/res/values-nl/master_switch_preference_strings.xml
+++ b/res/values-nl/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">Waarschuwing</string>
+    <string name="switch_disable_warning_message">Deze instelling uitschakelen zonder een alternatief in te schakelen kan uw apparaat onbruikbaar maken. Weet u zeker dat u door wil gaan?</string>
+</resources>
