--- a/res/values-cs/changelog_strings.xml
+++ b/res/values-cs/changelog_strings.xml
@@ -17,4 +17,8 @@
  * limitations under the License.
  */
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="changelog_name">Seznam změn</string>
+    <string name="commit_id">Změna-ID</string>
+    <string name="commit_message">Popis změny</string>
+</resources>
