--- a/res/values-es/changelog_strings.xml
+++ b/res/values-es/changelog_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="changelog_name">Lista de cambios</string>
+    <string name="commit_message">Mensaje del commit</string>
+</resources>
