--- a/res/values-es/master_switch_preference_strings.xml
+++ b/res/values-es/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">Atención</string>
+    <string name="switch_disable_warning_message">Desactivar esta opción sin habilitar una alternativa puede hacer su dispositivo inusable. ¿Desea continuar?</string>
+</resources>
