--- a/res/values-fr/stats_strings.xml
+++ b/res/values-fr/stats_strings.xml
@@ -19,5 +19,25 @@
 -->
 <resources>
     <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
+    <string name="anonymous_statistics_title">Statistiques BaikalOS</string>
+    <string name="anonymous_statistics_warning_title">À propos</string>
+    <string name="enable_reporting_title">Activer le rapport</string>
+    <string name="preview_data_title">Aperçu des données</string>
+    <string name="view_stats_title">Voir la page des statistiques</string>
+    <string name="anonymous_learn_more">En savoir plus</string>
+    <string name="last_report_on">Dernier rapport</string>
+    <string name="reporting_interval">Intervalle de rapport</string>
+    <plurals name="reporting_interval_days">
+        <item quantity="one">1 jour</item>
+        <item quantity="other">1 jour</item>
+    </plurals>
+    <string name="next_report_on">Prochain rapport</string>
     <!-- Anonymous Statistics - Preview -->
+    <string name="preview_id_title">ID unique</string>
+    <string name="preview_device_title">Appareil</string>
+    <string name="preview_country_title">Pays</string>
+    <string name="preview_carrier_title">Opérateur</string>
+    <string name="preview_romname_title">Nom de la ROM</string>
+    <string name="preview_romversion_title">Version d\'BaikalOS</string>
+    <string name="preview_buildtype_title">Type de la build d\'BaikalOS</string>
 </resources>
