--- a/res/values-hu/master_switch_preference_strings.xml
+++ b/res/values-hu/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">Figyelmeztetés</string>
+    <string name="switch_disable_warning_message">Ennek a funkciónak a letiltása, ha nem állít be más alternatívát helyette, a készülék használhatatlanságához vezethet. Mégis folytatja?</string>
+</resources>
