--- a/res/values-it/changelog_strings.xml
+++ b/res/values-it/changelog_strings.xml
@@ -17,4 +17,8 @@
  * limitations under the License.
  */
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="changelog_name">Registro Modifiche</string>
+    <string name="commit_id">Commit ID schermata di blocco</string>
+    <string name="commit_message">Commit messaggio</string>
+</resources>
