--- a/res/values-ja/master_switch_preference_strings.xml
+++ b/res/values-ja/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">警告</string>
+    <string name="switch_disable_warning_message">代替のものを有効化せずにこの設定を無効化すると、端末が操作できなくなる場合があります。続行しますか？</string>
+</resources>
