--- a/res/values-ko/changelog_strings.xml
+++ b/res/values-ko/changelog_strings.xml
@@ -17,4 +17,8 @@
  * limitations under the License.
  */
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="changelog_name">변경 사항</string>
+    <string name="commit_id">잠금화면에 표시되는 사용자</string>
+    <string name="commit_message">커밋 메시지</string>
+</resources>
