--- a/res/values-tr/master_switch_preference_strings.xml
+++ b/res/values-tr/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">Uyarı</string>
+    <string name="switch_disable_warning_message">Bir alternatifi etkinleştirmeden bu ayarı devre dışı bırakmak cihazınızı kullanılamaz hale getirebilir. Devam edilsin mi?</string>
+</resources>
