--- a/res/values-zh-rCN/master_switch_preference_strings.xml
+++ b/res/values-zh-rCN/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">警告</string>
+    <string name="switch_disable_warning_message">如果不启用其他选项, 则禁用此设置可能会使设备 unusuable。继续？</string>
+</resources>
