--- a/res/values-zh-rTW/changelog_strings.xml
+++ b/res/values-zh-rTW/changelog_strings.xml
@@ -17,4 +17,8 @@
  * limitations under the License.
  */
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="changelog_name">更新日誌</string>
+    <string name="commit_id">鎖定畫面提交 ID</string>
+    <string name="commit_message">提交訊息</string>
+</resources>
