--- a/res/values-zh-rTW/master_switch_preference_strings.xml
+++ b/res/values-zh-rTW/master_switch_preference_strings.xml
@@ -17,4 +17,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">警告</string>
+    <string name="switch_disable_warning_message">如果不啟用其他選項，則停用此設定可能會使裝置不可用。繼續？</string>
+</resources>
