crowdin: import translation
Change-Id: Ie53a5afdf3e8c2415c746db9ec72d10876102cd4

--- a/res/values-es/changelog_strings.xml
+++ b/res/values-es/changelog_strings.xml
@@ -19,5 +19,6 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="changelog_name">Lista de cambios</string>
+    <string name="commit_id">ID de confirmación de bloqueo de pantalla</string>
     <string name="commit_message">Mensaje del commit</string>
 </resources>
