Performance and Thermal profiles. Per App and system wide. Device specific. Ask your device maintainer to add support!
Change-Id: I0823f598f2008c27870ec455c1f6e997622323fe

--- a/res/values/power_save_strings.xml
+++ b/res/values/power_save_strings.xml
@@ -20,4 +20,6 @@
     <string name="prefs_app_options_title">App Options</string>
     <string name="prefs_app_options_summary">App Options</string>
 
+    <string name="default_profiles_title">Default profiles</string>
+
 </resources>
