crowdin: import translation
Change-Id: I3daa04ac14abefcedfda23e75041be56fef981ba

--- a/res/values-ru/power_save_strings.xml
+++ b/res/values-ru/power_save_strings.xml
@@ -18,4 +18,5 @@
     <!-- App ops -->
     <string name="prefs_app_options_title">Настройки приложений</string>
     <string name="prefs_app_options_summary">Настройки приложений</string>
+    <string name="default_profiles_title">Профили по умолчанию</string>
 </resources>
