--- a/res/values-pl/master_switch_preference_strings.xml
+++ b/res/values-pl/master_switch_preference_strings.xml
@@ -20,6 +20,6 @@
 <resources>
     <string name="switch_disable_warning_title">Ostrzeżenie</string>
     <string name="switch_disable_warning_message">Wyłączenie tego ustawienia bez włączania opcji alternatywnej może spowodować, że urządzenie przestanie działać. Kontynuować?</string>
-    <string name="switch_disable_warning_continue">@android:string/ok</string>
-    <string name="switch_disable_warning_cancel">@android:string/anuluj</string>
+    <string name="switch_disable_warning_continue">ok</string>
+    <string name="switch_disable_warning_cancel">anuluj</string>
 </resources>
