--- a/res/values-zh-rCN/master_switch_preference_strings.xml
+++ b/res/values-zh-rCN/master_switch_preference_strings.xml
@@ -20,6 +20,6 @@
 <resources>
     <string name="switch_disable_warning_title">警告</string>
     <string name="switch_disable_warning_message">如果不启用其他选项, 则禁用此设置可能会使设备 unusuable。继续？</string>
-    <string name="switch_disable_warning_continue">@android:string/确认</string>
-    <string name="switch_disable_warning_cancel">@android:string/取消</string>
+    <string name="switch_disable_warning_continue">@android:string/ok</string>
+    <string name="switch_disable_warning_cancel">@android:string/cancel</string>
 </resources>
