--- a/res/values/navigation_strings.xml
+++ b/res/values/navigation_strings.xml
@@ -1,6 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
 
+    <!-- DT2S -->
+    <string name="double_tap_sleep_gesture_title">DT2S on statusbar</string>
+    <string name="double_tap_sleep_gesture_summary">Double tap on statusbar to send a device to sleep</string>
     <!-- Navigation bar -->
     <string name="navigation_bar_title">Navigation bar</string>
     <string name="navigation_bar_title_summary">Enable on-screen navigation keys</string>
