--- a/res/xml/navigation.xml
+++ b/res/xml/navigation.xml
@@ -22,6 +22,12 @@
     android:title="@string/navigation_title">
 
      <ru.baikalos.gear.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_sleep_gesture_title"
+        android:summary="@string/double_tap_sleep_gesture_summary"
+        android:defaultValue="0" />
+
+     <ru.baikalos.gear.preference.SystemSettingSwitchPreference
         android:key="navigation_bar_enabled"
         android:title="@string/navigation_bar_title"
         android:summary="@string/navigation_bar_title_summary"
